[gd_scene load_steps=9 format=3 uid="uid://ca80slfhr535x"]

[ext_resource type="Script" path="res://Scripts/gameover.gd" id="1_3pvx5"]
[ext_resource type="Texture2D" uid="uid://b70abvf0vtsue" path="res://Assets/images.png" id="1_eivvs"]
[ext_resource type="Theme" uid="uid://dmtpgtsw3xg0r" path="res://Themes/title.tres" id="2_3x2uv"]
[ext_resource type="Theme" uid="uid://bc237lymtagr2" path="res://Themes/normal_button.tres" id="3_g7frb"]
[ext_resource type="FontFile" uid="uid://61vtpscsa6pv" path="res://Assets/brackeys_platformer_assets/fonts/PixelOperator8-Bold.ttf" id="4_u2dtq"]

[sub_resource type="Animation" id="Animation_jpi7m"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/Label:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(488.5, 37)]
}

[sub_resource type="Animation" id="Animation_yl8jx"]
resource_name = "new_animation"
length = 1.5
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/Label:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(163.5, 37), Vector2(163.5, 96)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_by4u1"]
_data = {
"RESET": SubResource("Animation_jpi7m"),
"new_animation": SubResource("Animation_yl8jx")
}

[node name="Gameover" type="Node2D"]
script = ExtResource("1_3pvx5")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1152.0
offset_bottom = 648.0

[node name="TextureRect" type="TextureRect" parent="Control"]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
texture = ExtResource("1_eivvs")

[node name="Label" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -87.5
offset_top = 37.0
offset_right = 737.5
offset_bottom = 138.0
grow_horizontal = 2
theme = ExtResource("2_3x2uv")
theme_override_font_sizes/font_size = 100
text = "You Lose!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -329.5
offset_top = -103.0
offset_right = 329.5
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_g7frb")
theme_override_fonts/font = ExtResource("4_u2dtq")
theme_override_font_sizes/font_size = 70
text = "Play Again"

[node name="Button2" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -161.0
offset_top = 48.0
offset_right = 161.0
offset_bottom = 174.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_g7frb")
theme_override_fonts/font = ExtResource("4_u2dtq")
theme_override_font_sizes/font_size = 70
text = "Quit"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_by4u1")
}
autoplay = "new_animation"

[node name="Timer" type="Timer" parent="."]
wait_time = 0.25

[connection signal="button_down" from="Control/Button" to="." method="_on_button_button_down"]
[connection signal="button_down" from="Control/Button2" to="." method="_on_button_2_button_down"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
